src/test/resources/Fall_21_Test_Cases/Bad/LO-0/lvl0-bad-easy-6.lo
// <Block> is missing
int foo, bar;